<resources>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_setting">设置</string>
    <string name="action_settings">Settings</string>


    <string name="app_name_">瓦斯</string>

    <string name="main_company_name">徐州·矿一</string>
    <string name="main_url">www.xzkydz.com</string>
    <string name="main_product">产品</string>
    <string name="main_instructions_text">说明文档</string>
    <string name="main_product_inf">产品信息</string>
    <string name="main_after_sales">售后信息</string>
    <string name="main_configuration">配置</string>
    <string name="main_backups">备份</string>
    <string name="main_prints">打印</string>
    <string name="main_others">其它</string>
    <string name="main_company_inf">企业信息</string>
    <string name="main_settings">设置</string>

    <string name="title_activity_mark_down">产品信息</string>
    <string name="title_activity_after_sale">售后信息</string>
    <string name="title_activity_back_ups">数据备份</string>


    <!--售后信息-->
    <string name="BasicInf">基本信息</string>
    <string name="MeasureInf">计量信息</string>
    <string name="TrainInf">培训记录</string>
    <string name="MaintainInf">维修记录</string>
    <string name="DateInProduced">生产日期:</string>
    <string name="ExpirationDate">质保截止期:</string>
    <string name="Telephone">售后电话:</string>
    <string name="Commitment">售后承诺:</string>


    <!--设置-->
    <string name="updata">检查更新</string>
    <string name="netSetting">服务器设置</string>
    <string name="title_activity_query_report">QueryReportActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>


    <string name="instruction_pre">启动后可以在电脑端无线管理报告文档</string>
    <string name="instruction_pre_inf">（ 本设备与电脑必须在同一局域网，传输中不可以关闭本页 ）</string>
    <string name="instruction">请在PC端“我的电脑”地址栏中输入：</string>
    <string name="no_wifi">"    无WiFi网络"</string>
    <string name="no_wifi_hint">无WiFi网络,点击WiFi图标以查看WiFi设置</string>
    <string name="wifi_state">"WiFi状态"</string>
    <string name="start_server">启动连接</string>
    <string name="stop_server">断开连接</string>
    <string name="notif_server_starting">远程管理服务已启动</string>
    <string name="notif_title">远程管理服务正在运行</string>
    <string name="storage_warning">外部存储不可用.</string>

    <string name="report_list">报 告 列 表</string>
    <string name="report_tran">报 告 闪 传</string>
    <string name="title_activity_search_history_task">SearchHistoryTaskActivity</string>

    <string name="search_task_all">全部</string>
    <string name="search_task_unfinshed">"未完成  "</string>
    <string name="search_task_last">最近一次</string>


    <string name="search_number">水泵编号</string>
    <string name="search_person">测试人员</string>
    <string name="search_status">状态</string>
    <string name="serach_time">时间</string>

    <string name="please_input_content">请输入搜索内容</string>
    <string name="null_task">无符合条件的任务...</string>

    <string name="tittle_task_all">全部测试任务</string>
    <string name="tittle_task_unfinish">待完成任务</string>
    <string name="tittle_task_last">最近一次任务</string>

    <string name="task_unit">受检单位</string>
    <string name="task_test_function">测试方法</string>
    <string name="task_number">设备编号</string>
    <string name="task_test_people">测试人员</string>
    <string name="task_test_time">创建时间</string>
    <string name="task_statue">任务状态</string>
    <string name="task_complete">已完成</string>
    <string name="task_uncomplete">未完成</string>
    <string name="continue_test">继续测试</string>
    <string name="resues_paras">复用参数</string>
    <string name="title_activity_motor_selector">MotorSelectorActivity</string>

    <!--电机库选择界面-->
    <string name="motor_tittle">电机库选择</string>
    <string name="motor_add_motor">添加电机库</string>
    <string name="motor_search">查询</string>
    <string name="motor_clear">清空查询条件</string>

    <string name="motor_djxh">"电机型号:"</string>
    <string name="motor_edgl">"额定功率:"</string>
    <string name="motor_eddy">"额定电压(V):"</string>

    <string name="eddy_null">忽略</string>
    <string name="eddy_110">110</string>
    <string name="eddy_115">115</string>
    <string name="eddy_220">220</string>
    <string name="eddy_283.5">283.5</string>
    <string name="eddy_380">380</string>
    <string name="eddy_660">660</string>
    <string name="eddy_3000">3000</string>
    <string name="eddy_3300">3300</string>
    <string name="eddy_6000">6000</string>
    <string name="eddy_6600">6600</string>
    <string name="eddy_10000">10000</string>

    <string name="djxl">电机系列</string>
    <string name="djxh">电机型号</string>
    <string name="eddy">"额定电压\nV"</string>
    <string name="eddl">"额定电流\nA"</string>
    <string name="edgl">"额定功率\nkW"</string>
    <string name="edxl">"额定效率"</string>
    <string name="kzdl">"空载电流\nA"</string>
    <string name="kzgl">"空载功率\nkW"</string>
    <string name="edglys">额定功率因数</string>
    <string name="js">"级数\n"</string>
    <string name="wgjjdl">无功经济当量</string>


    <!--新建电机库-->
    <string name="xh">电机型号：</string>
    <string name="shbxh">水泵型号：</string>
    <string name="djxl_new">电机效率：</string>
    <string name="chdxl_new">传动效率：</string>
    <string name="eddy_new">额定电压：</string>
    <string name="eddl_new">额定电流：</string>
    <string name="edgl_new">额定功率：</string>
    <string name="edxl_new">额定效率：</string>
    <string name="kzgl_new">空载功率：</string>
    <string name="kzdl_new">空载电流：</string>
    <string name="edglysh_new">额定功率因数：</string>
    <string name="kzglysh_new">空载功率因数：</string>
    <string name="wgjjdl_new">无功经济当量：</string>
    <string name="js_new">级数：</string>


    <string name="mm">"mm "</string>
    <string name="per">"%  "</string>
    <string name="m">"m   "</string>
    <string name="MPa">"MPa"</string>
    <string name="kW">"kW "</string>
    <string name="m3h">"m³/h"</string>
    <string name="tem">"℃ "</string>
    <string name="empty">"   "</string>
    <string name="v">"V "</string>
    <string name="a">"A "</string>
    <string name="title_activity_pdf">PdfActivity</string>
    <string name="title_activity_pdf_list">PdfListActivity</string>
    <string name="title_activity_data_manager">DataManagerActivity</string>
    <string name="title_activity_greated">GreatedActivity</string>
    <string name="title_activity_config">服务器设置</string>


</resources>
