<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lib_white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.xzkydz.function.menu.aftersale.AfterSaleActivity"
    tools:showIn="@layout/activity_after_sale">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/spacing_normal"
        android:paddingRight="@dimen/spacing_normal"
        android:layout_marginTop="@dimen/spacing_normal"
        android:orientation="vertical">

        <TextView style="@style/TextView_Line_Black" />

        <TextView
            style="@style/TextView_SaleInf_Tittle"
            android:text="@string/BasicInf" />

        <TextView style="@style/TextView_Line_Normal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/x30"
            android:divider="@drawable/bg_divider"
            android:orientation="horizontal"
            android:showDividers="middle">

            <TextView
                style="@style/TextView_SaleInf_Normal"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/DateInProduced" />

            <TextView
                android:id="@+id/tv_date_in_produced"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

        </LinearLayout>

        <TextView style="@style/TextView_Line_Normal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/x30"
            android:divider="@drawable/bg_divider"
            android:orientation="horizontal"
            android:showDividers="middle">

            <TextView
                style="@style/TextView_SaleInf_Normal"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/ExpirationDate" />

            <TextView
                android:id="@+id/tv_expiration_date"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

        </LinearLayout>

        <TextView style="@style/TextView_Line_Normal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/x30"
            android:divider="@drawable/bg_divider"
            android:orientation="horizontal"
            android:showDividers="middle">

            <TextView
                style="@style/TextView_SaleInf_Normal"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/Telephone" />

            <TextView
                android:id="@+id/tv_telephone"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

        </LinearLayout>

        <TextView style="@style/TextView_Line_Normal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/x30"
            android:divider="@drawable/bg_divider"
            android:orientation="horizontal"
            android:showDividers="middle">

            <TextView
                style="@style/TextView_SaleInf_Normal"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/Commitment" />

            <TextView
                android:id="@+id/tv_commitment"
                style="@style/TextView_SaleInf_Normal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

        </LinearLayout>

        <TextView style="@style/TextView_Line_Black" />

        <TextView
            style="@style/TextView_SaleInf_Tittle"
            android:text="@string/MeasureInf" />

        <TextView style="@style/TextView_Line_Normal" />

        <ListView
            android:id="@+id/lv_measure_inf"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x200"
            android:background="@color/lib_white"
            ></ListView>

        <TextView style="@style/TextView_Line_Black" />

        <TextView
            style="@style/TextView_SaleInf_Tittle"
            android:text="@string/TrainInf" />

        <TextView style="@style/TextView_Line_Normal" />

        <ListView
            android:id="@+id/lv_train_inf"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x200"
            android:background="@color/lib_white"
            ></ListView>


        <TextView style="@style/TextView_Line_Black" />

        <TextView
            style="@style/TextView_SaleInf_Tittle"
            android:text="@string/MaintainInf" />

        <TextView style="@style/TextView_Line_Normal" />

        <ListView
            android:id="@+id/lv_maintaininf"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x200"
            android:background="@color/lib_white"
            ></ListView>

    </LinearLayout>


</ScrollView>
