<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativelayout"
    android:layout_width="match_parent"
    android:layout_height="500dp"
    android:background="@color/lemonchiffon"
    android:fitsSystemWindows="true">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/spacing_normal">

        <LinearLayout
            android:id="@+id/ll_search_buton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/x30"
            android:layout_marginRight="@dimen/x30"
            android:layout_marginTop="@dimen/x50"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_task_all"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:drawablePadding="10dp"
                android:drawableTop="@drawable/search_icon_all"
                android:gravity="center"
                android:text="@string/search_task_all"
                android:textColor="@drawable/selector_text_color"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_task_unfinished"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:drawablePadding="10dp"
                android:drawableTop="@drawable/search_icon_unfinished"
                android:gravity="center"
                android:text="@string/search_task_unfinshed"
                android:textColor="@drawable/selector_text_color"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_task_last"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:drawablePadding="10dp"
                android:drawableTop="@drawable/search_icon_last"
                android:gravity="center"
                android:text="@string/search_task_last"
                android:textColor="@drawable/selector_text_color"
                android:textSize="14sp" />
        </LinearLayout>


        <!--<com.ldoublem.loadingviewlib.view.LVCircularJump-->
        <!--android:id="@+id/loading"-->
        <!--android:layout_width="80dp"-->
        <!--android:layout_height="30dp"-->
        <!--android:layout_gravity="center"-->
        <!--/>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/x10"
            android:layout_marginLeft="@dimen/x10"
            android:layout_marginRight="@dimen/x10"
            android:layout_marginTop="@dimen/x10"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_unit_tittle_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="受检单位名称"
                android:textColor="@color/lib_tittleBar"
                android:textSize="16sp"
                android:visibility="gone" />

            <View
                android:id="@+id/line_split_one"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:visibility="gone"
                android:background="@color/black_normal" />

            <LinearLayout
                android:id="@+id/ll_gridle_tittle"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/colorPrimaryQuarter"
                android:divider="@drawable/divider_linearlayout_search"
                android:orientation="horizontal"
                android:showDividers="middle"
                android:visibility="gone">

                <TextView
                    style="@style/MyTextView"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/task_test_function"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    style="@style/MyTextView"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/task_number"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    />

                <TextView
                    style="@style/MyTextView"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/task_test_people"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    />

                <TextView
                    style="@style/MyTextView"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/task_statue"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    />

                <TextView
                    style="@style/MyTextView"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/task_test_time"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>

            <View
                android:id="@+id/line_split_two"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:visibility="gone"
                android:background="@color/black_normal" />

            <ListView
                android:id="@+id/lv_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:fadeScrollbars="false"
                android:visibility="invisible" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_show_null_inf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/null_task"
            android:textSize="14sp"
            android:visibility="gone"
            />
    </FrameLayout>
</RelativeLayout>
